      Windows, you will need to download/compile a "music_sdl" build or 32-bit
      Mac build.
      [Ralph]
    * When using gfx_sdl2, gamepads should now work reliably: A is Use, B is
      Cancel/Menu, Start is Menu, and you can use new joy:button constants like
      joy:A, joy:LeftStick, joy:L2 for keypress commands, and axis:X, axis:RightY,
      axis:L2, etc. for "joystick axis" [Ralph]
    * Preference bitset "Map joystick (left) stick to dpad" (default on) [Ralph]
    * You can copy/paste enemies and attacks by pressing Ctrl-C, etc, on the
      <- Enemy/Attack ## -> line [Ralph]
    * Shift+F# alternative keycombos to Ctrl+F# debug keys, so you can activate
      them without accidentally activating NPCs/etc [Ralph]
    * "Don't display 'Miss'" and "Don't display 'Fail'" attack bits [Ralph]

   * New Plotscripting Features
    * "set timer args" [Ralph]
    * "sl:walkabout sprite" alias to "sl:walkabout sprite component" and
      "sl:walkabout shadow" alias to "sl:walkabout shadow component"
    * "get scancode name" works for joy: scancodes too [Ralph]
    * "expand strings in slices" [James]
    * "hero is chasing" and "npc is chasing" [James]
    * "max map id" [James]
    * "get slice lookup name" [Ralph]
    * "create global npc", "global npc reference" (and alias "global npc"),
      "get npc pool" [James]
    * Commands that now accept an optional "pool" argument:
      "alter npc", "npc reference", "npc copy count", "change npc id",
      "create npc", "read npc" [James]
    * "gracefully dismount vehicle" [James]
    * "read foemap" [Ralph]
    * "breakpoint" [Ralph]
    * "delete hero by slot" [James]
    * "get ui color", "set ui color", "get box style color",
      "get box style edge color", "get box style border" [Ralph]
    * "get child autosort", "set child autosort" [Ralph]
    * "last layer id", "layer id under walkabouts" [James]
    * "get/set global sound volume" [Ralph]

  *** Changes